# pydroid-ipcam

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  pydroid-ipcam.py  pydroid_ipcam.py  pylintrc  pyproject.toml  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: pythonpublish.yml  release-drafter.yml  test.yml
pydroid_ipcam/: __init__.py  exceptions.py
